--- a/style.css
+++ b/style.css
@@ -4,3 +4,8 @@ body { background: #e6f7ff !important;}
 .navbar.navbar-expand-lg.navbar-light.static-top {
 	background-color: #cceeff;
 }
+
+.navbar-brand {
+  padding: 0px;
+}
+
